--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ body{
     margin:0;
     width:100%;
     height:100%;
-    font-family:"cursive";
+    /* font-family:"cursive"; */
 }
 html{
     width:100%;
@@ -18,7 +18,7 @@ html{
 .navbar-brand{
     color:white;
 }
-.main, .total-score{
+.main, .total-score, .total-round{
     padding:25px;
     margin-top: 50px 0;
     position: relative;
@@ -64,6 +64,13 @@ button{
     padding:10px;
     display: inline-block;
 }
+.round{
+    text-align:center;
+    padding:10px;
+}
+.select-round{
+    border: 2px solid black;
+}
 img{
     background-color:white;
 }
@@ -82,8 +89,11 @@ img{
 .res{
     position: relative;
     margin-top: 30px;
-    padding-top:30px;
-    right:-30px;
+    margin-left:80px;
+    margin-right:80px;
+    border: 3px double black;
+    /* padding-top:30px; */
+    /* right:-30px; */
 }
 .reset{
     text-align:center;
@@ -104,7 +114,7 @@ h4{
     font-size:28px;
 }
 li,p{
-    font-size:22px;
+    font-size:18px;
     text-align:center ;
     
 }
