--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ box-sizing: border-box;
 
 body{
     padding:0;
-    background-color:#99ddff;
+    background-color:#0000ff;
     margin:0;
     width:100%;
     height:100%;
@@ -52,7 +52,7 @@ html{
     background-color:#66ffcc;
 }
 .computers{
-    color:#3333ff;
+    color:#1c0399;
 }
 .users{
     color:#cc00ff
