--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ box-sizing: border-box;
 
 body{
     padding:0;
-    background-color:#0000ff !important;
+    background-color:#537ef5 !important;
     margin:0;
     width:100%;
     height:100%;
