--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ box-sizing: border-box;
 
 body{
     padding:0;
-    background-color:#3268fc !important;
+    background-color:#3268ff !important;
     margin:0;
     width:100%;
     height:100%;
