--- a/css/index.css
+++ b/css/index.css
@@ -29,13 +29,22 @@ html{
     /* top: 30px; */
     /* left: -25px; */
     text-align:center;
-
 }
-.main, .total-score {
-    padding:25px;
-    margin-top: 50px 0;
+.main{
+    padding-top:0px;
+    padding:10px;
+    margin-top: 10px 0;
     position: relative;
-    top: 30px;
+    top: 10px;
+    /* left: -25px; */
+    text-align:center;
+}
+
+.total-score {
+    padding:30px;
+    margin-top: 20px 0;
+    position: relative;
+    top: 10px;
     /* left: -25px; */
     text-align:center;
 }
@@ -81,6 +90,7 @@ button{
     margin: 0px 20px;
     background-color:#66ffff;
     padding: 10px;
+    box-shadow: 5px 10px;
     display: inline-block;
 }
 .choice1, .choice2{
@@ -172,6 +182,7 @@ li,p{
 }
 .info-button{
     background-color:#ccccb3;
+    padding:10px;
 }
 .info-button:hover{
     background-color:#b0b0a4;
