--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 * {
 margin: 0;
 padding: 0;
@@ -9,12 +11,14 @@ body{
     background-color:#3268ff !important;
     margin:0;
     width:100%;
+    font-family: 'Press Start 2P', 'cursive' !important;
     height:100%;
     /* font-family:"cursive"; */
 }
 html{
     width:100%;
     height:100%;
+    font-family: 'Press Start 2P', 'cursive';
 }
 .myTrue{
     color:"#ff0000" !important;
@@ -36,6 +40,7 @@ html{
     margin-top: 10px 0;
     position: relative;
     top: 10px;
+    font-family: 'Press Start 2P', 'cursive';
     /* left: -25px; */
     text-align:center;
 }
@@ -69,7 +74,8 @@ html{
 .input-button{
     padding:30px;
     text-align:center;
-    align-item:center;
+    align-items:center;
+    
 
 }
 .mystyle{
@@ -110,6 +116,7 @@ button{
     border-radius:1%;
     text-align:center;
     font-size:18px;
+    width: 100px;
     background-color:#00ff00;
 }
 img{
@@ -149,8 +156,11 @@ h1{
     font-family: 'Brush Script MT', cursive;
 }
 .anim{
-    padding:25px;
-    margin:30px;
+    padding:10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-top: 10px;
+    margin-bottom:10px;
     text-align:center;
 }
 .inform{
@@ -176,13 +186,21 @@ li,p{
 }
 .try-button{
     background-color:#ccff99;
+    color:black;
+    font-size: 14px;
+    padding: 1%;
+    margin-top: 10px;
+    border: 1px solid black;
+    box-shadow: 0px 0px 5px black;
 }
 .try-button:hover{
     background-color:#aefa61;
 }
 .info-button{
-    background-color:#ccccb3;
+    background-color:#0c0c0c;
     padding:10px;
+    box-shadow: 0px 0px 5px #b0b0a4;
+    font-size:14px;
 }
 .info-button:hover{
     background-color:#b0b0a4;
@@ -195,5 +213,63 @@ li,p{
     text-align:center !important;
 }
 .footer{
-    padding-top:20px;
+    padding-top:10px;
+    font-size: 14px !important;
 }
+
+body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+}
+
+.popup-content {
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    background-color: red;
+    color: white;
+}
+
+button {
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+.container{
+    background-color: #aefa61;
+    
+}
+
