--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
 * {
 margin: 0;
@@ -8,9 +8,10 @@ box-sizing: border-box;
 
 body{
     padding:0;
-    background-color:#3268ff !important;
+    background-color:#f0f0f0 !important;
     margin:0;
     width:100%;
+    font-family: 'Montserrat' sans-serif;
     /* font-family: 'Press Start 2P', 'cursive' !important; */
     height:100%;
     /* font-family:"cursive"; */
@@ -46,6 +47,32 @@ html{
     /* left: -25px; */
     text-align:center;
 }
+.round {
+    margin-bottom: 20px;
+    
+  }
+  .input-group{
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+  
+  .round label {
+    font-size: 18px;
+    font-weight: bold;
+  }
+  
+  .round .form-control {
+    border-radius: 5px;
+  }
+  
+.navbar{
+    background-color: #333;
+    color: #fff;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2) !important;
+}
 .resd, .resf{
     font-size:20px;
 }
@@ -66,9 +93,9 @@ html{
     border: 2px solid black;
     background-color:#ccff33;
 }
-.res{
+/* .res{
     background-color:#66ffcc;
-}
+} */
 .computers{
     color:#1c0399;
 }
@@ -98,7 +125,7 @@ button{
     /* border: 4px solid black; */
     border-radius: 50%;
     margin: 0px 20px;
-    background-color:#66ffff;
+    background-color:#d5d5d5;
     padding: 10px;
     box-shadow: 0px 0px 5px 5px #333, 0px 0px 5px 5px #333;
     display: inline-block;
@@ -116,21 +143,21 @@ button{
     padding:10px;
 }
 .select-round{
-    border: 2px solid black;
+    /* border: 2px solid black; */
     border-radius:1%;
     text-align:center;
     font-size:18px;
     width: 25%;
-    background-color:#00ff00;
+    /* background-color:#00ff00; */
 }
 img{
-    background-color:#66ffff;
+    background-color:#d5d5d5;
     border-radius:20%;
     /* cursor: -webkit-grab; */
     cursor: grab;
 }
 .option:hover, .image:hover{
-    background-color:#00ffff;
+    background-color:#a3a3a3;
 }
 .choice2{
     /* align-item : left; */
@@ -149,17 +176,17 @@ img{
     margin-top: 30px;
     margin-left:80px;
     margin-right:80px;
-    border: 3px double black;
+    /* border: 3px double black; */
     /* padding-top:30px; */
     /* right:-30px; */
 }
 .reset{
     text-align:center;
 }
-.game-font, h5{
+/* .game-font, h5{
     font-family: 'Brush Script MT', 'cursive' !important;
     font-size: 2.0em;
-}
+} */
 .anim{
     padding:0.625em;
     padding-top: 0.9375em;
@@ -187,7 +214,7 @@ li,p{
     
 }
 .try-button{
-    background-color:#ccff99;
+    background-color:#abb5a1;
     color:black;
     font-size: 0.8em;
     padding: 1%;
@@ -196,12 +223,13 @@ li,p{
     box-shadow: 0px 0px 5px black;
 }
 .try-button:hover{
-    background-color:#aefa61;
+    background-color:#333;
+    color: #fff;
 }
 .info-button{
     background-color:#0c0c0c;
     padding:10px;
-    box-shadow: 0px 0px 5px #b0b0a4;
+    box-shadow: 0px 0px 5px  #b0b0a4;
     font-size:1em;
 }
 .info-button:hover{
@@ -210,7 +238,7 @@ li,p{
 .rules, .info{
     padding:1.25em;
     background-color:#ccccb3;
-    border:2px solid black;
+    /* border:2px solid black; */
     border-radius:10%;
     text-align:center !important;
 }
@@ -220,7 +248,7 @@ li,p{
 }
 
 body {
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
     text-align: center;
     background-color: #f4f4f4;
     margin: 0;
@@ -250,12 +278,12 @@ body {
 
 .close {
     position: absolute;
-    top: 10px;
+    top: 2px;
     right: 10px;
-    font-size: 20px;
+    font-size: 24px;
     cursor: pointer;
-    background-color: red;
-    color: white;
+    /* background-color: red; */
+    color: rgb(243, 10, 10);
 }
 
 button {
@@ -275,3 +303,12 @@ button:hover {
     
 }
 
+.option:hover .image{
+    animation: shake 0.5s ;
+    animation-iteration-count: infinite;
+}
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    50%{transform: translate(1px, -1px) rotate(-5deg);}
+    100% {transform: translate(1px, -1px) rotate(1deg);}
+}
